app-of-apps/apps/k3d/k3d-grafana-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: k3d-grafana-route
  namespace: lens
spec:
  routes:
    - match: Host(`grafana.local`)
      kind: Rule
      services:
        - name: grafana
          port: 80
  tls:
    secretName: grafana-server-tls
